@@ -273,9 +273,6 @@ o algo que no hago bien al leer directorio. La solución pasa por escribir el no
 arriba)
 -no lee enlaces simbolicos en filesystem: ejemplo /home/pi/PREPARADOS de raspiboy
 -no se ven enlaces simbólicos en navegador de archivos. Como mínimo de Mac no se ven. Y en Linux?
-
-
-
 -quiza get_file_type deberia excluir sockets y devices, no considerarlos archivos normales,
 asi en smartload y similares no aparecerian -> pero en caso de UART si que deben salir dispositivos!!
 
@@ -285,7 +282,6 @@ asi en smartload y similares no aparecerian -> pero en caso de UART si que deben
 
 -Browser cintas standard que permita alterar la posición de la cinta
 
--organizar ventanas en cascada
 
 -mejoras accesibilidad: 
 * https://www.w3.org/TR/low-vision-needs/
