@@ -15,6 +15,7 @@ Added another toy ZXLife to a new menu Procrastinate
 Improved ZX Vision
 - Allow to render only changed pixels (so it speeds up render). Internal flag: dirty_user_must_draw_contents
 - Added more utf-8 characters (ï)
+- Added action to put windows in Cascade
 
 
 Improved ZX Spectrum Next emulation:
